# rust_zero_to_master

./: README.md
Rust_Courses/data_collections/src/: demo.rs
Rust_Courses/decisions/: Cargo.toml
Rust_Courses/decisions/src/: demo  demo.rs
Rust_Courses/declarative_macros/src/: demo_macro_impl_blocks.rs  demo_macro_repetitions.rs  demo_macro_syntax_extensions.rs
Rust_Courses/easier_data_management/src/: demo.rs
Rust_Courses/expanding_knowledge/src/: demo.rs
Rust_Courses/fallible_fucntions/src/: demo.rs
Rust_Courses/hash_map/src/: demo.rs
Rust_Courses/improving_program_reliability/: Cargo.toml
Rust_Courses/improving_program_reliability/src/: demo.rs
Rust_Courses/lifetimes/src/: demo.rs
Rust_Courses/loop_lecture/: Cargo.toml
Rust_Courses/loop_lecture/src/: main.rs
Rust_Courses/managing_code/src/: demo.rs
Rust_Courses/milestone_project_billing_application/src/: demo.rs
Rust_Courses/parallel_execution/: Cargo.toml
Rust_Courses/parallel_execution/src/: demo.rs
Rust_Courses/rust_memory_model/src/: demo.rs
Rust_Courses/shared_functionality/src/: demo.rs
Rust_Courses/shared_ownership/src/: demo.rs
Rust_Courses/type_conversions/src/: demo.rs
Rust_Courses/working_with_data/: Cargo.toml
Rust_Courses/working_with_data/src/: demo  demo.rs
Rust_Fundamentals/hello_world/: main
Rust_Fundamentals/loop_lecture/: main
activities_Rust/: Cargo.toml
clipstash/: Cargo.toml  data.db
clipstash/migrations/: 20230203132222_api_key.sql
clipstash/src/lib/: mod.rs
clipstash/templates/: clip.hbs:Zone.Identifier
hello_world/: main.rs
(+28 files in other folders)
