[package]
name = "activities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
thiserror = "1.0"
crossbeam-channel = "*"
colored = "*"
parking_lot = "0.12.1"

[lib]
name = "activity"
path = "src/lib.rs"


